# wire_manipulation

./: .gitignore  LICENSE  README.md  TODO.txt  frames.gv  install.sh
Docker/: Dockerfile  cookie.sh  run.sh
manipulation/dual_robot_bringup/: CMakeLists.txt  package.xml
manipulation/dual_robot_bringup/launch/: bringup.launch  slip_bringup.launch
manipulation/dual_robot_control/: CMakeLists.txt  package.xml
manipulation/dual_robot_control/config/: modes.yaml  robot_a_.yaml  robot_a_controllers.yaml  robot_b_.yaml  robot_b_controllers.yaml
manipulation/dual_robot_control/launch/: dual_robot_bringup.launch  dual_robot_ros_control.launch
manipulation/dual_robot_control/src/: arm_search_executor.py  clear_wire.py  clear_wire_devel.py  clear_wire_executor.py  dual_cam_testing.py  ml_testing.py  reattach_end_executor.py  robot_control.py  robot_control_server.py  robot_services.py  test_clear_wire_server_no_vision.py  test_clear_wire_without_vision.py  test_vision.py
manipulation/dual_robot_control/test/: clear_wire_devel.py  vision_experimental.py
manipulation/dual_robot_description/: CMakeLists.txt  package.xml
manipulation/dual_robot_description/urdf/: dual_robot.urdf.xacro  robot.urdf.xacro  robot_a_.urdf.xacro  robot_b_.urdf.xacro
manipulation/dual_robot_gazebo/: CMakeLists.txt  package.xml
manipulation/dual_robot_gazebo/config/: dual_robot.rviz  dual_robot_trajectory_controllers.yaml  robot_a_trajectory_controllers.yaml  robot_b_trajectory_controllers.yaml
manipulation/dual_robot_gazebo/launch/: dual_robot_gazebo.launch  dual_robot_gazebo_test.launch  robot.launch  robot_launcher.launch
manipulation/dual_robot_gazebo/worlds/: empty.world
manipulation/dual_robot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
manipulation/dual_robot_moveit_config/config/: controllers.yaml  dual_viper.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
manipulation/dual_robot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  demo_gazebo.launch  dual_robot_moveit.launch  dual_viper_moveit_controller_manager.launch.xml  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
manipulation/dual_robot_msgs/: CMakeLists.txt  package.xml
manipulation/dual_robot_msgs/srv/: GraspObject.srv  GraspWire.srv
ml/best/: data.pkl
ml/best/data/: 0  1  10  100  101  102  104  105  106  107  108  110  111  112  113  114  116  117  118  119  12  120  121  122  124  125  126  127  129  13  130  131  132  133  135  136  137  138  139  14  (+276 more)
ml/task_dlo-connector-labeling-2023_08_22_23_24_07-pascal voc 1.1/: labelmap.txt
ml/task_dlo-connector-labeling-2023_08_22_23_24_07-pascal voc 1.1/Annotations/: 2023-08-21-164703.xml  2023-08-21-164705.xml  2023-08-21-164707.xml  2023-08-21-164709.xml  2023-08-21-164710.xml  2023-08-21-164712.xml  2023-08-21-164713.xml  2023-08-21-164714.xml  2023-08-21-164715.xml  2023-08-21-164730.xml  2023-08-21-164739.xml  2023-08-22-144743.xml  2023-08-22-144746.xml  2023-08-22-144747.xml  2023-08-22-144749.xml  2023-08-22-144801.xml  2023-08-22-144802.xml  2023-08-22-144804.xml  2023-08-22-144806.xml  2023-08-22-144808.xml  2023-08-22-144809.xml  2023-08-22-144811.xml  2023-08-22-144812.xml  2023-08-22-144836.xml  2023-08-22-144838.xml  2023-08-22-144840.xml  2023-08-22-144842.xml  2023-08-22-144843.xml  (+94 more)
testing/: experimental_results.ods  test.py  wire_sim.py
testing/vision_testing/: eval.py
vision/: CMakeLists.txt  package.xml
vision/launch/: test_vision_no_robots.launch  test_without_vision.launch  vision.launch
vision/resources/cad/: cylinder.stl  cylinder.stp  pipe.SLDPRT  pipe.stl
vision/src/: arm_aruco_tracker.py  arm_camera.py  arm_camera_frame.py  arm_camera_link.py  arm_camera_link_old.py  aruco_equations.py  aruco_pose_server.py  aruco_rotation_transform.py  aruco_tracker.py  cam_calibration.py  compare_sensed_wire.py  depth_pos_tracker.py  depthcloud_tracker.py  environment_grid.py  final_connector_pose.py  main.py  marker_array.py  markers.py  match_connector_cam.py  mounted_aruco_tracker.py  mounted_ml_testing.py  mounted_ml_tracker.py  point_cloud_processing.py  point_cloud_testing.py  proc_connector_pc.py  process_point_cloud_server.py  rgb_segmentation.py  rgbd_segmentation.py  search_routine.py  search_target.py  slip_detect.py  slip_pose_server.py  test.py  test_copy.py  wire_state_estimation.py
vision/test/: compare_sensed_wire_with_april_tags.py  point_cloud_processing.py
vision/urdf/: world_frame.urdf.xacro
wire_manipulation_description/: CMakeLists.txt  package.xml
wire_manipulation_description/config/: urdf.rviz
wire_manipulation_description/launch/: display.launch
wire_manipulation_description/urdf/: base_scene.xacro  environment.xacro
wire_manipulation_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
wire_manipulation_moveit_config/config/: base_scene.srdf  fake_controllers.yaml  gazebo_base_scene.urdf  joint_limits.yaml  joint_state_publisher.yaml  kinematics.yaml  ompl_planning.yaml  simple_moveit_controllers.yaml  stomp_planning.yaml
wire_manipulation_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  moveit.rviz  ompl-chomp_planning_pipeline.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  stomp_planning_pipeline.launch.xml  wire_manipulation_moveit.launch
wire_modeling/: CMakeLists.txt  package.xml  setup.py
wire_modeling_msgs/: CMakeLists.txt  package.xml
wire_modeling_msgs/srv/: ArucoPose.srv  ProcessPointCloud.srv
(+37 files in other folders)
