<?xml version="1.0"?>
<package format="2">
  <name>vision</name>
  <version>0.0.0</version>
  <description>The vision package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="drojas@todo.todo">drojas</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>depth_image_proc</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
   <exec_depend>depth_image_proc</exec_depend>
   <exec_depend>pcl_ros</exec_depend>
   <exec_depend>ros_numpy</exec_depend>
   <exec_depend>realsense2_camera</exec_depend>
   <exec_depend>wire_modeling</exec_depend>
   <exec_depend>wire_modeling_msgs</exec_depend>
   <exec_depend>apriltag_ros</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
